<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.MainActivity"
    tools:ignore="VectorDrawableCompat">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="610dp"
        android:text="@string/summer_vaccation"
        android:textColor="@color/purple_700"
        android:textSize="40dp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="156dp"
        android:layout_height="134dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="131dp"
        android:layout_marginRight="119dp"
        android:scaleType="centerCrop"
        android:src="@drawable/summer_vacation" />

    <LinearLayout
        android:layout_width="370dp"
        android:layout_height="198dp"
        android:layout_below="@+id/circle1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <EditText
            android:id="@+id/field1"
            android:layout_width="349dp"
            android:layout_height="71dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/username_or_loginid"
            android:inputType="text" />

        <EditText
            android:id="@+id/field2"
            android:layout_width="345dp"
            android:layout_height="64dp"
            android:layout_below="@+id/field1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circle1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:layout_marginRight="142dp"
        android:text="@string/signup"
        android:textColor="#008"
        android:textSize="20sp"
        android:textStyle="italic"
        android:onClick="signIn"
        android:transitionName="tvLogin"
        app:backgroundTint="#FBFBFB" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvSignIn"
        android:layout_centerHorizontal="true"
        android:background="#FDF9F9"
        android:onClick="forgotpassword"
        android:text="@string/forgot_your_password"
        android:textSize="14sp"
        android:textColor="#008"
        app:backgroundTint="#FBF9F9" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="loginButton"
        android:layout_marginLeft="155dp"
        android:layout_marginBottom="246dp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/Resultview"
        android:layout_width="362dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="33dp"
        android:layout_marginLeft="33dp"
        android:layout_marginTop="498dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="255dp"
        android:text="@+id/Resultview"
        android:textColor="#EF1B0C"
        android:textSize="10sp"
        android:textStyle="italic"></TextView>


</RelativeLayout >