<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.Sign_In"
    tools:ignore="VectorDrawableCompat">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="610dp"
        android:text="@string/summer_vaccation"
        android:textColor="@color/purple_700"
        android:textSize="40dp"
        android:textStyle="italic" />

    <ImageView
        android:id="@+id/circle1"
        android:layout_width="156dp"
        android:layout_height="134dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="131dp"
        android:layout_marginRight="119dp"
        android:scaleType="centerCrop"
        android:src="@drawable/summer_vacation" />

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="245dp"
        android:layout_below="@+id/circle1"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical"
        android:paddingBottom="50dp">

        <EditText
            android:id="@+id/field1"
            android:layout_width="349dp"
            android:layout_height="71dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/email_id"
            android:inputType="text" />

        <EditText
            android:id="@+id/field2"
            android:layout_width="345dp"
            android:layout_height="64dp"
            android:layout_below="@+id/field1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/field3"
            android:layout_width="345dp"
            android:layout_height="64dp"
            android:layout_below="@+id/field2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:hint="@string/ddmmyyyy"
            android:inputType="number" />

    </LinearLayout>

    <TextView
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circle1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="408dp"
        android:layout_marginRight="142dp"
        android:onClick="LogIn"
        android:text="Already a Customer?"
        android:textColor="#008"
        android:textSize="20sp"
        android:textStyle="italic"
        android:transitionName="tvLogin" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="155dp"
        android:layout_marginBottom="138dp"
        android:onClick="SignUp"
        android:text="SignUp" />

    <TextView
        android:id="@+id/Resultview"
        android:layout_width="362dp"
        android:layout_height="59dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="603dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="255dp"
        android:text="@+id/Resultview"
        android:textColor="#EF1B0C"
        android:textSize="10sp"
        android:textStyle="italic"></TextView>

</RelativeLayout >